--- a/lesson1-crash-course/index.html
+++ b/lesson1-crash-course/index.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/main.css">
+
     <title>website 1</title>
 </head>
 <body>
-    
+    <div class="navbar">
+        <div class="container">
+            <nav>
+                <!--right navbar and right navbar-->
+                <ul class="left-navbar">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Blog</a></li>
+                </ul>
+                
+                <ul class="right-navbar">
+                    <li><a href="">Contact</a></li>
+                    <li><a href="">Features</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
 </body>
+    <!--script link-->
+    <script src="assets/js/main.js"></script>
 </html>
