--- a/lesson1-crash-course/index.html
+++ b/lesson1-crash-course/index.html
@@ -8,16 +8,20 @@
     <title>website 1</title>
 </head>
 <body>
+<!--================navbar container==============================-->
+
     <div class="navbar">
         <div class="container">
+            <img id="mobile-cta" class="mobile-menu" src="assets/icons/menu.svg" alt="open navigation">
             <nav>
+                <img id="mobile-exit" class="mobile-menu-exit"  src="assets/icons/exit.svg" alt="close navigation">
                 <!--right navbar and right navbar-->
                 <ul class="left-navbar">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Blog</a></li>
                 </ul>
-                
+
                 <ul class="right-navbar">
                     <li><a href="">Contact</a></li>
                     <li><a href="">Features</a></li>
@@ -25,6 +29,94 @@
             </nav>
         </div>
     </div>
+
+<!--================ end of navbar container==============================-->
+
+<section class="hero">
+    <div class="container">
+        <div class="col">
+            <h1>my first website</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                Vel natus itaque est harum dolorum doloribus quia optio 
+                soluta at facere fugit molestias deserunt sequi ut accusamus 
+                commodi.
+            </p>
+        </div>
+        <div class="hero-button">
+            <a href="#" class="primary-cta">Read More</a>
+        </div>
+    </div>
+</section>
+<!-- ==========================end of hero section ==========================-->
+
+<section class="feature-section">
+    <div class="container">
+        <ul>
+            <li>Come and we have funn all day.</li>
+            <li>Come and we have funn all day.</li>
+            <li>Come and we have funn all day.</li>
+            <li>Come and we have funn all day.</li>
+            <li>Come and we have funn all day.</li>
+            <li>Come and we have funn all day.</li>
+        </ul>
+
+        <img src="assets/icons/holding-phone.jpg" alt="man holding a phone">
+
+    </div>
+</section>
+<!-- ==========================end of feature section ==========================-->
+
+<section class="testimonial-section">
+    <div class="container">
+        <ul>
+            <li>
+                <img src="assets/icons/person.jpg" alt="profile pic">
+                <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Ipsam voluptatibus nulla odio nihil ut. Ad illo nostrum quis 
+                    mollitia iusto?
+                </blockquote>
+                <cite>- O samuel Vinald</cite>
+            </li>
+            <li>
+                <img src="assets/icons/person.jpg" alt="profile pic">
+                <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Ipsam voluptatibus nulla odio nihil ut. Ad illo nostrum quis 
+                    mollitia iusto?
+                </blockquote>
+                <cite>- O samuel Vinald</cite>
+            </li>
+            <li>
+                <img src="assets/icons/person.jpg" alt="profile pic">
+                <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Ipsam voluptatibus nulla odio nihil ut. Ad illo nostrum quis 
+                    mollitia iusto?
+                </blockquote>
+                <cite>- O samuel Vinald</cite>
+            </li>
+        </ul>
+    </div>
+</section>
+<!-- ==========================end of testominal section ==========================-->
+
+<section class="contact-section">
+    <div class="container">
+        <div class="contact-left">
+            <h2>Contact</h2>
+            <form action="">
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name" placeholder="o samuel vinald">
+                
+                <label for="message">Message</label>
+                <textarea name="message" id="message" cols="30" rows="10"></textarea>
+
+                <input type="submit" class="message-cta" value="send message" id="btn">
+            </form>
+        </div>
+        <div class="contact-right">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m26!1m12!1m3!1d184873.8738706314!2d33.8840384674514!3d1.1694168736928212!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m11!3e6!4m3!3m2!1d1.2122308!2d33.8706253!4m5!1s0x1778decae51f7d75%3A0x3e94c6db04d9dbf7!2sButebo!3m2!1d1.2006154!2d33.860789!5e0!3m2!1sen!2sug!4v1687028505811!5m2!1sen!2sug" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </div>
+</section>
 </body>
     <!--script link-->
     <script src="assets/js/main.js"></script>
