--- a/lesson1-crash-course/index.html
+++ b/lesson1-crash-course/index.html
@@ -12,6 +12,7 @@
 
     <div class="navbar">
         <div class="container">
+            <a href="#" class="logo">Logo</a>
             <img id="mobile-cta" class="mobile-menu" src="assets/icons/menu.svg" alt="open navigation">
             <nav>
                 <img id="mobile-exit" class="mobile-menu-exit"  src="assets/icons/exit.svg" alt="close navigation">
