--- a/lesson2/practice/index.html
+++ b/lesson2/practice/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- link to the index.css file -->
+    <link rel="stylesheet" href="assets/css/index.css">
     <title>YouTube</title>
 </head>
 <body>
+    <div class="container">
+
+        <button>Hello</button>
+
+    </div>
     
 </body>
 </html>
