--- a/lesson2/practice/index.html
+++ b/lesson2/practice/index.html
@@ -5,13 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- link to the index.css file -->
-    <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="stylesheet" href="assets/css/css.css">
+    
     <title>YouTube</title>
 </head>
 <body>
     <div class="container">
 
         <button>Hello</button>
+        <button>Click</button>
+
+        <hr>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Ut fuga natus officiis, fugit enim deleniti assumenda sapiente odit sunt debitis!
+        </p>
+        <hr>
+        <a href="#" target="_blank">link</a>
+        <hr>
+        <button style="color:white; background:red; border:0; padding:10px;">Subscribe</button>
+        <button style="color:blue; background:white; border: 2px solid blue; padding:10px 20px;">join</button>
+        <button style="color:white; background:blue; border-radius:20px; padding:10px 20px">Tweet</button>
+
 
     </div>
     
