--- a/lesson2/practice/index.html
+++ b/lesson2/practice/index.html
@@ -6,7 +6,7 @@
 
     <!-- link to the index.css file -->
     <link rel="stylesheet" href="assets/css/css.css">
-    
+
     <title>YouTube</title>
 </head>
 <body>
@@ -22,9 +22,9 @@
         <hr>
         <a href="#" target="_blank">link</a>
         <hr>
-        <button style="color:white; background:red; border:0; padding:10px;">Subscribe</button>
-        <button style="color:blue; background:white; border: 2px solid blue; padding:10px 20px;">join</button>
-        <button style="color:white; background:blue; border-radius:20px; padding:10px 20px">Tweet</button>
+        <button class="button1">Subscribe</button>
+        <button class="button2">join</button>
+        <button class="button3">Tweet</button>
 
 
     </div>
