--- a/practice/index.html
+++ b/practice/index.html
@@ -25,7 +25,15 @@
         <button class="button1">Subscribe</button>
         <button class="button2">join</button>
         <button class="button3">Tweet</button>
+        <button class="button4">Request Now</button>
+        <button class="button5">Add to Cart</button>
+        <button class="button6">Sign up </button>
+        <button class="button7">Get started</button>
+        <button class="button8">Download</button>
+        <button class="button9">Save</button>
 
+        <hr>
+        
 
     </div>
     
