--- a/practice/index.html
+++ b/practice/index.html
@@ -7,7 +7,7 @@
     <!-- link to the index.css file -->
     <link rel="stylesheet" href="assets/css/css.css">
 
-    <title>YouTube</title>    
+    <title>Practice</title>    
 </head>
 <body>
     <div class="container">
@@ -33,7 +33,23 @@
         <button class="button9">Save</button>
 
         <hr>
-        
+        <!-- dealing with text -->
+        <div class="video" style="font-family: arial;">
+            <p class="video-title">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi, facere!
+            </p>
+
+            <p class="video-views">3.4M views &#183; 6 months ago</p>
+
+            <p class="video-owner">O samuel vinald</p>
+
+            <p class="video-details"> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Cum, dolorem. Ex velit aspernatur facere! Nostrum maiores 
+                tenetur temporibus suscipit necessitatibus.
+            </p>
+        </div>
+        <hr>
+        <p class="text-apple">Lorem ipsum dolor sit amet consectetur adipisicing elit. <span> Quis, omnis</span></p>
     </div>
     
 </body>
