--- a/lesson 2 Html and css/index.html
+++ b/lesson 2 Html and css/index.html
@@ -70,6 +70,7 @@
 
 
         <!-- learning to work with the grid-->
+        <hr>
         <h1>grids</h1>
         <div class="div">
             <div class="div1" style="background: pink;">Div1</div>
@@ -101,6 +102,26 @@
             <div class="div1" style="background: pink;">Div1</div>
             <div class="div1" style="background: aqua;">1fr</div>
             <div class="div1" style="background: aqua;">2fr</div>
+        </div>
+
+
+        <hr>
+        <h1>flex box</h1>
+
+        <div class="div5">
+            <div class="div4">div1 is being changed</div>
+            <div class="div3">flex 1</p></div>
+            <div class="div5">flex 2</div>
+        </div>
+
+        <hr>
+
+        <div class="flex">
+            <div class="flex1">flex1</div>
+            <div class="flex2">100px</div>
+            <div class="flex3">flex2</div>
+            <div class="flex4"></div>
+            <div class="flex5"></div>
         </div>
     </div>
     
