--- a/lesson 2 Html and css/index.html
+++ b/lesson 2 Html and css/index.html
@@ -119,9 +119,13 @@
         <div class="flex">
             <div class="flex1">flex1</div>
             <div class="flex2">100px</div>
-            <div class="flex3">flex2</div>
-            <div class="flex4"></div>
-            <div class="flex5"></div>
+            <div class="flex3">flex2</div> 
+        </div>
+
+        <div class="flex01">
+            <div class="flex4">flex1</div>
+            <div class="flex5">100px</div>
+            <div class="flex6">flex2</div> 
         </div>
     </div>
     
