--- a/youtube/index.html
+++ b/youtube/index.html
@@ -12,11 +12,24 @@
    <div class="container">
         <!-- header of the website -->
         <div class="header">
-            <div class="left-section">left navbar</div>
+            <div class="left-section">
+                <ul>
+                    <li>logo</li>
+                    <li>logo</li>
+                </ul>
+            </div>
             <div class="center-section">
                 <input type="text" name="search" id="" class="search-bar" placeholder="Search">
             </div>
-            <div class="right-section">right navbar</div>
+            <div class="right-section">
+                <ul>
+                    <li>Home</li>
+                    <li>Home</li>
+                    <li>Home</li>
+                    <li>Home</li>
+                    <li>Home</li>
+                </ul>
+            </div>
         </div>
 
         <!-- end of the header section -->
