--- a/lesson 2 Html and css/index.html
+++ b/lesson 2 Html and css/index.html
@@ -126,6 +126,23 @@
             <div class="flex5">100px</div>
             <div class="flex6">flex2</div> 
         </div>
+        <hr>
+
+        <!-- more flex box practice -->
+        <div class="header">
+            <div class="top">
+                <h4>home</h4>
+                <p>14</p>
+            </div>
+            <div class="middle">
+                <h4>Notifications</h4>
+                <p>3</p>
+            </div>
+            <div class="bottom">
+                <h4>Messages</h4>
+                <p>5</p>
+            </div>
+        </div>
     </div>
     
 </body>
