--- a/lesson 2 Html and css/nickson.html
+++ b/lesson 2 Html and css/nickson.html
@@ -29,7 +29,7 @@
         <!-- End of nav bar -->
 
         <div class="form-section">
-            <form action="">
+            <form action="" class="form1">
                 <h1>
                     Makerere University E-learning Environment
                 </h1>
@@ -37,18 +37,19 @@
                     <div class="form-left">
                         <input type="text" name="" id="" placeholder="Enter username">
                         <input type="password" name="" id="" placeholder="Enter your password">
-                        <input type="checkbox" name="" id="">Remember username
+                        <span><input type="checkbox" name="" id="">Remember username</span>
                         <button>Log in</button>
                     </div>
                     
                     <div class="form-right">
-                        Forgot Password? <a href="#">Click here</a>
-                        <p>cookies must be enabled in your browser</p>
+                        <p class="pr1">Forgot Password or Username? <a href="#">Click here</a></p>
+                        <p class="pr2">Cookies must be enabled in your browser</p>
                     </div>
                 </div>
             </form>
+
             <!-- end of the first form -->
-            <form action="">
+            <form action="" class="form2">
                 <h2>Is this your first time here?</h2>
                 <p>For full access to this site, you need to first create an account</p>
                 <button>Create new account</button>
