HTML fundamentals -> 1_basics

--- a/HTML/2_basics/index.html
+++ b/HTML/2_basics/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="assets/css/css.css">
     <title>CSS</title>
 </head>
 <body>
-    
+    <h1>Heading 1</h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora ut a impedit aspernatur, cupiditate deleniti provident voluptatum nisi, maxime quis delectus asperiores quia enim quod, ipsa unde neque sed atque.
+    </p>
 </body>
 </html>
