--- a/HTML/1_basics/index.html
+++ b/HTML/1_basics/index.html
@@ -44,6 +44,24 @@
         </p>
         <hr>
 
+        <!-- block elements -->
+        <h3>Block elements</h3>
+
+        <div class="block">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Ut fuga natus officiis, fugit enim deleniti assumenda sapiente odit sunt debitis!
+            </p>
+        </div>
+        <hr>
+
+        <!-- inline elements -->
+        <h3>Inline elements</h3>
+        <span>1. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        </span>
+        <span>2. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Ut fuga natus officiis, fugit enim deleniti assumenda sapiente odit sunt debitis!
+        </span>
+
         <!-- Images -->
         <h3>Images</h3>
         <img src="https://picsum.photos/200/300" alt="random image">
