--- a/HTML/2_basics/index.html
+++ b/HTML/2_basics/index.html
@@ -8,9 +8,86 @@
     <title>CSS</title>
 </head>
 <body>
-    <h1>Heading 1</h1>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora ut a impedit aspernatur, cupiditate deleniti provident voluptatum nisi, maxime quis delectus asperiores quia enim quod, ipsa unde neque sed atque.
-    </p>
+    <div class="first">
+        <h1>Heading 1</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora ut a impedit aspernatur, cupiditate deleniti provident voluptatum nisi, maxime quis delectus asperiores quia enim quod, ipsa unde neque sed atque.
+        </p>
+        <h1>Underlining</h1>
+        <p>
+            <u>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora ut a impedit aspernatur, cupiditate deleniti provident voluptatum nisi, maxime quis delectus asperiores quia enim quod, ipsa unde neque sed atque.</u>
+        </p>
+        <h1>class</h1>
+        <p class="class1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores, non!</p>
+
+        <h1>id</h1>
+        <p id="id">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias, sunt?</p>
+        <hr>
+    </div>
+
+    <h1>Layout - column</h1>
+    <div class="container">
+        <div class="row1">
+            <div class="col">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+            </div>
+            <div class="col">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+            </div>
+            <div class="col">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+            </div>
+        </div>
+    </div>
+
+    <h1>Layout - row</h1>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-4">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+            </div>
+                        <div class="col-4">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+            </div>
+            <div class="col-4">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+            </div>
+            <div class="col-4">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+            </div>
+                        <div class="col-4">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- shrinking -->
+    <h1>Shrinking</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-3 s1">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+            </div>
+            <div class="col-3 s2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+            </div>
+            <div class="col-3 s2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+            </div>
+            <div class="col-3 s2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+            </div>
+                        <div class="col-3">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+            </div>
+        </div>
+
+    <h1>Box model</h1>
+    <div class="box">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+    </div>
+
+
 </body>
 </html>
