--- a/HTML/1_basics/index.html
+++ b/HTML/1_basics/index.html
@@ -16,14 +16,14 @@
     
     <div class="container">
         <!-- side navbar -->
-        <div class="sidebar">
+        <!-- <div class="sidebar">
             sidebar
                 <!-- absolute fixes and element on  the page-->
             <div class="absolute">
                 X
             </div>
 
-         </div>
+         </div> -->
 
         <!-- headings -->
         <hr>
