--- a/HTML/html-css.html
+++ b/HTML/html-css.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- link to the index.css file -->
-    <link rel="stylesheet" href="assets/css/css3.css">
+    <link rel="stylesheet" href="assets/css/html-css.css">
 
     <!-- bootstrap link -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
