--- a/HTML/html-flexbox.html
+++ b/HTML/html-flexbox.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="assets/css/css2.css">
-    <title>CSS</title>
+    <link rel="stylesheet" href="assets/css/flexbox.css">
+    <title>Flexbox CSS</title>
 </head>
 <body>
     <div class="first">
