--- a/Bootstrap/Basics/aligmnent-text-fw.html
+++ b/Bootstrap/Basics/aligmnent-text-fw.html
@@ -53,7 +53,7 @@
         <p class="display-4 text-white bg-success">success</p>
         <p class="display-4 text- bg-danger">danger</p>
         <p class="display-4 text-white bg-info">info</p>
-        <p class="display-4 text-white bg-light">light</p>
+        <p class="display-4 text-dark bg-light">light</p>
         <p class="display-4 text-white bg-dark">dark</p>
     </div>
 
